src/test/test-models/bad/err-fun-bare-types-int.stan
functions {
  real[3] foo() { 
    real a[3]; 
    return a; 
  }
}
model {
}
